# ObsidianClient

./: CMakeLists.txt  README.md
include/: ApiClient.h  ConfigManager.h  KeyGenerator.h  VpnConnection.h  WireGuardKeys.h
qml/: ConnectionView.qml  LoginPage.qml  MainPage.qml  PeerListView.qml  SettingsPage.qml  main.qml  qml.qrc
src/: ApiClient.cpp  ConfigManager.cpp  VpnConnection.cpp  WireGuardKeys.cpp  main.cpp
